idf_component_register(SRCS "main.cpp"
                            "TurnIndicatorSystem.cpp"
                            "CANBusHandler.cpp"
                    INCLUDE_DIRS "."
                    REQUIRES)
# idf_component_register(SRCS "main.cpp"
#                     INCLUDE_DIRS "."
#                     REQUIRES)
